Added javadoc maven plugin.